feature: administration api for vendors domain
feature:administration api for application domain

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
             POSTGRES_DB: postgres
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: postgres
+        ports:
+            -   5406:5432
         networks:
             - zmodules
 
