refactor: split entities into modules and resolved thread
comment: resolved github comment

WIP: delete application method refactor

WIP: rework app registration logic

Rework session and session factory

refactor: changed implenetation for db session for all services

fix: vendor id in service

Minor changes for demo frontend

refactor: simplified application add process

test: added unit tests for new services

refactor: changed docker network naming

test: added unit test for application role service

lint: fixed linting errors

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         ports:
             - 8506:8506
         networks:
-            - zmodules
+            - gfmodules-qualification
 
     qualification_db:
         image: postgres:14
@@ -23,8 +23,8 @@ services:
         ports:
             -   5406:5432
         networks:
-            - zmodules
+            - gfmodules-qualification
 
 networks:
-  zmodules:
+  gfmodules-qualification:
     driver: bridge
