name docker network: docker network needs to be named to remove the directory prefix so it can be shared with other containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.5"
 
 services:
     app:
@@ -28,3 +28,4 @@ services:
 networks:
   gfmodules-qualification:
     driver: bridge
+    name: gfmodules-qualification
