Data generation script

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,21 @@ services:
         networks:
             - gfmodules-qualification
 
+    app-init:
+        image: postgres:14
+        depends_on: [ 'app', 'qualification_db' ]
+        build:
+            context: .
+            args:
+                NEW_UID: ${NEW_UID:-1000}
+                NEW_GID: ${NEW_GID:-1000}
+        working_dir: /src
+        volumes:
+            - ./:/src
+        networks:
+            - gfmodules-qualification
+        command: bash -c 'sleep 2 && tools/./migrate_db.sh qualification_db postgres postgres postgres'
+
 networks:
   gfmodules-qualification:
     driver: bridge
