feature: gfmodules python shared package installation with proper docs and tags
refactor: updated autpilot script and make file to the new setup

docs: updated docs to new setup

refactor: updated makefile and autopilot.sh

update: poetry lock file

attemtp to fix pipeline

reattemtp to fix pipeline

lint: fix errors

docs: updated docs with github token info and gitignore

update: pyproject.toml and poetry.lock

Update README.md

Co-authored-by: Rick Lambrechts <rick@rl-webdiensten.nl>

Update tools/autopilot.sh

Co-authored-by: Rick Lambrechts <rick@rl-webdiensten.nl>

Update .gitignore

Co-authored-by: Rick Lambrechts <rick@rl-webdiensten.nl>

Update README.md

Co-authored-by: Rick Lambrechts <rick@rl-webdiensten.nl>

Update tools/autopilot.sh

Co-authored-by: Rick Lambrechts <rick@rl-webdiensten.nl>

Update tools/autopilot.sh

Co-authored-by: Rick Lambrechts <rick@rl-webdiensten.nl>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
             args:
                 NEW_UID: ${NEW_UID:-1000}
                 NEW_GID: ${NEW_GID:-1000}
+                GIT_USER: ${GIT_USERNAME:-}
+                GIT_PAT: ${GIT_PAT:-}
+
         volumes:
             - ./:/src
         ports:
