--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -43,11 +43,12 @@ WORKDIR ${PROJECT_DIR}
 FROM base as builder
 
 COPY ./pyproject.toml ./poetry.lock ./
-COPY auth.toml /root/.config/pypoetry/auth.toml
 
 RUN poetry config repositories.git-minvws-gfmodules-python-shared https://github.com/minvws/gfmodules-python-shared.git
 RUN poetry lock --no-update
-RUN --mount=type=cache,target=${POETRY_CACHE_DIR} poetry install --no-root --no-interaction
+RUN --mount=type=cache,target=${POETRY_CACHE_DIR} \
+    --mount=type=secret,id=auth_toml,target=/root/.config/pypoetry/auth.toml \
+    poetry install --no-root --no-interaction
 
 FROM base as final
 
