Add startup interval

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,9 @@ services:
     qualification_db:
         image: postgres:14
         healthcheck:
-          test: [ "CMD-SHELL", "pg_isready --user postgres" ]
-          interval: 5s
+          test: [ "CMD-SHELL", "pg_isready --user postgres"]
+          start_period: 10s
+          start_interval: 1s
           retries: 5
         restart: always
         environment:
