--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,7 @@ license = "EUPL-1.2"
 authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
 repository = "https://github.com/minvws/nl-irealisatie-python-api-skeleton"
 readme = "README.md"
-packages = [
-    { include = "app" }
-]
+packages = [{ include = "app" }]
 
 [tool.poetry.scripts]
 data-generation = "tools.create_data:run"
@@ -23,7 +21,7 @@ inject = "^5.2.0"
 sqlalchemy = "^2.0.25"
 psycopg = { extras = ["binary", "pool"], version = "^3.1.17" }
 faker = "^25.9.1"
-gfmodules-python-shared = { git="https://github.com/minvws/gfmodules-python-shared.git", tag = "v0.0.2" }
+gfmodules-python-shared = { git = "https://github.com/minvws/gfmodules-python-shared-private.git", tag = "v0.0.2" }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
@@ -39,11 +37,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 cache-dir = "~/.cache/ruff"
-include = [
-    "pyproject.toml",
-    "app/*.py",
-    "tests/*.py",
-]
+include = ["pyproject.toml", "app/*.py", "tests/*.py"]
 
 [tool.mypy]
 files = "app,tests"
@@ -55,6 +49,4 @@ mypy_path = "stubs"
 
 [tool.pytest.ini_options]
 cache_dir = "~/.cache/pytest"
-testpaths = [
-    "tests",
-]
+testpaths = ["tests"]
