--- a/.github/workflows/release-package-venv.yaml
+++ b/.github/workflows/release-package-venv.yaml
@@ -13,6 +13,10 @@ jobs:
         python_version: ["3.11"]
     runs-on: ubuntu-22.04
     steps:
+      - name: Set env
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV &&
+          echo "PKG_NAME=`basename $GITHUB_REPOSITORY -private`" >> $GITHUB_ENV
+
       - name: Configure git
         run: git config --global url."https://${{ secrets.REPO_READ_ONLY_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
@@ -20,4 +24,4 @@ jobs:
         uses: minvws/nl-irealisatie-generic-pipelines/.github/actions/python-venv-package@main
         with:
           python_version: ${{ matrix.python_version }}
-          package_file_name: gfmodules-qualification-register-admin-api-private
+          package_file_name: ${{ env.PKG_NAME }}
