--- a/.github/workflows/release-package.yaml
+++ b/.github/workflows/release-package.yaml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Set env
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV &&
+          echo "PKG_NAME=`basename $GITHUB_REPOSITORY -private`" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
 
@@ -18,11 +19,11 @@ jobs:
         run: 'echo "{ \"version\": \"${{ env.RELEASE_VERSION }}\", \"git_ref\": \"$GITHUB_SHA\"}" > version.json'
 
       - name: Create tar
-        run: tar -czf gfmodules-qualification-register-admin-api-private_${{ env.RELEASE_VERSION }}.tar.gz app docs tools ./version.json
+        run: tar -czf ${{ env.PKG_NAME }}_${{ env.RELEASE_VERSION }}.tar.gz app docs tools ./version.json
 
       - name: Upload release tar
         uses: actions/upload-artifact@v4
         with:
-          name: gfmodules-qualification-register-admin-api-private_${{ env.RELEASE_VERSION }}
-          path: gfmodules-qualification-register-admin-api-private_${{ env.RELEASE_VERSION }}.tar.gz
+          name: ${{ env.PKG_NAME }}_${{ env.RELEASE_VERSION }}
+          path: ${{ env.PKG_NAME }}_${{ env.RELEASE_VERSION }}.tar.gz
 
